# MONEY

./: .env.example  .gitignore  MONEY_BUTTON_SPEC_V2.md  README.md  go.sh  kill.sh  pyproject.toml
docs/: RUNBOOK.md
scripts/: backfill_curated.py  backfill_markets.py  backfill_news.py  backfill_prices.py  backfill_trades.py  backfill_via_events.py  backtest_all_strategies.py  backtest_calibration_v1.py  data_summary.py  inspect_candles.py  inspect_events.py  inspect_one_market.py  inspect_trades.py  score_news_relevance.py  status.py  train_calibration_v1.py  walk_forward_calibration.py
src/moneybutton/: __init__.py  __main__.py
src/moneybutton/backtest/: engine.py  fees.py  fills.py  metrics.py  promotion.py  reports.py  walk_forward.py
src/moneybutton/brain/: client.py
src/moneybutton/core/: audit.py  config.py  db.py  executor.py  kill_switch.py  money.py  notifier.py
src/moneybutton/data/: scraper_kalshi.py  scraper_news.py  store.py  synthetic.py
src/moneybutton/features/: common.py  pipeline.py  (+6 more)
tests/: conftest.py  test_arbitrage.py  test_backtest_engine.py  test_brain_client.py  test_calibration_model.py  test_consistency.py  test_drift.py  test_events_backfill.py  test_executor.py  test_feature_as_of.py  test_features_no_leakage.py  test_kalshi_auth.py  test_kalshi_client_requests.py  test_kill_switch.py  test_money.py  test_news_features.py  test_news_strategy.py  test_orchestrator_paper.py  test_price_features.py  test_promotion_gate.py  test_scraper_kalshi.py  test_scraper_news_paths.py  test_store.py  test_strategy_signals.py  test_trades.py
(+19 files in other folders)
