[project]
name = "moneybutton"
version = "0.1.0"
description = "Locally-hosted quantitative trading system for Kalshi prediction markets with multi-strategy edge engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "moneybutton operator" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "cryptography>=42.0",
  "click>=8.1",
  "anthropic>=0.40",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "joblib>=1.4",
  "sentence-transformers>=3.0",
  "apscheduler>=3.10",
  "streamlit>=1.37",
  "python-dateutil>=2.9",
  "feedparser>=6.0",
  "jinja2>=3.1",
  "markdown>=3.6",
  "tenacity>=8.5",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
moneybutton = "moneybutton.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moneybutton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
